syntax = "proto3";

//#options
option java_multiple_files = true;
option java_package = "com.fevo.user.grpc";
option java_outer_classname = "UserProto";

package user;
//#options

//#services
service UserService {

    rpc listUsers(Empty) returns (ListUsersResponse);

}
//#services

//#messages
message Id {
    string id = 1;
}

message Empty {
}

message User {
    string id = 1;
    string username = 2;
}

message ListUsersResponse {
    repeated User users = 1;
}

